# goodluckh-demo

./: .editorconfig  .gitignore  README.md
backend/: .taplo.toml  Cargo.toml
backend/src/: main.rs
frontend/: package.json
frontend/public/: index.html
frontend/src/: AircraftPicker.js  App.js  index.css  index.js
frontend/src/components/: AircraftSelectionPane.js  MapView.js
