[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web   = "4.1.0"
actix-cors  = "0.6.2"
ordered-float = "3.0.0"
lib_router = { git= "https://github.com/Arrow-air/lib-router.git", branch = "goodluckh/dw-364/implementation-petgrap"}
serde = { version = "1.0.130", features = ["derive"] }
